Create tmp directory earlier for roi_poly.shp home

--- a/notebooks/11. Space-Time WA.ipynb
+++ b/notebooks/11. Space-Time WA.ipynb
@@ -23,10 +23,12 @@
     "\n",
     "\n",
     "# load last saved map area and mdoe engine (if they exist)\n",
-    "if(not os.path.isdir('../scratch/')):\n",
-    "    os.mkdir('../scratch/')\n",
-    "if(os.path.isfile('../scratch/last_choices.txt')):\n",
-    "    f=open('../scratch/last_choices.txt','r')\n",
+    "if(not os.path.isdir('../scratch-ST/')):\n",
+    "    os.mkdir('../scratch-ST/')\n",
+    "if(not os.path.isdir('../scratch-ST/tmp')):\n",
+    "    os.mkdir('../scratch-ST/tmp')\n",
+    "if(os.path.isfile('../scratch-ST/last_choices.txt')):\n",
+    "    f=open('../scratch-ST/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
     "    f.close()\n",
     "    default_map=contents[0].replace(\"\\n\",\"\")\n",
@@ -88,13 +90,13 @@
     "\n",
     "if(not test_data_name =='Draw Your Own'):\n",
     "    if(test_data_name=='Last Area Drawn'):\n",
-    "        last_coords=pd.read_csv('../scratch/last_area.csv')\n",
+    "        last_coords=pd.read_csv('../scratch-ST/last_area.csv')\n",
     "        display(last_coords)\n",
     "        minx=last_coords.iloc[0]['minx']\n",
     "        miny=last_coords.iloc[0]['miny']\n",
     "        maxx=last_coords.iloc[0]['maxx']\n",
     "        maxy=last_coords.iloc[0]['maxy']\n",
-    "        roi_poly=gpd.read_file('../scratch/tmp/roi_poly.shp')\n",
+    "        roi_poly=gpd.read_file('../scratch-ST/tmp/roi_poly.shp')\n",
     "    elif(not test_data_name =='Draw Your Own'):\n",
     "        y_point_list = [miny, miny, maxy, maxy, maxy]\n",
     "        x_point_list = [minx, maxx, maxx, minx, minx]\n",
@@ -149,7 +151,7 @@
     "                   name = 'Example')\n",
     "    \n",
     "    if(test_data_name=='Last Area Drawn'):\n",
-    "        roi_poly=gpd.read_file('../scratch/tmp/roi_poly.shp')\n",
+    "        roi_poly=gpd.read_file('../scratch-ST/tmp/roi_poly.shp')\n",
     "        example_rect = GeoData(geo_dataframe = roi_poly,\n",
     "                   style={'color': 'purple', 'opacity':3, 'weight':1.9, 'dashArray':'2', 'fillOpacity':0.6},                  \n",
     "                   name = 'Example')\n",
@@ -251,7 +253,7 @@
     "        #display(lats,longs)\n",
     "        poly_geom = Polygon(zip(longs, lats))\n",
     "        roi_poly = gpd.GeoDataFrame(index=[0], crs=src_crs, geometry=[poly_geom]) \n",
-    "    roi_poly.to_file('../scratch/tmp/roi_poly.shp')\n",
+    "    roi_poly.to_file('../scratch-ST/tmp/roi_poly.shp')\n",
     "    roi_poly=roi_poly.to_crs(dst_crs)\n",
     "    lat_point_list = [minlat, minlat, maxlat, maxlat,maxlat]\n",
     "    lon_point_list = [minlong, maxlong, maxlong, minlong, minlong]\n",
@@ -265,7 +267,7 @@
     "    mbbox=mbbox.to_crs(dst_crs)\n",
     "    print(dst_crs,mbbox.total_bounds)\n",
     "    \n",
-    "    f=open('../scratch/last_area.csv','w') \n",
+    "    f=open('../scratch-ST/last_area.csv','w') \n",
     "    ostr='minx,miny,maxx,maxy\\n'\n",
     "    f.write(ostr)\n",
     "    ostr=str(minlong)+','+str(minlat)+','+str(maxlong)+','+str(maxlat)+'\\n'\n",
@@ -282,7 +284,7 @@
    "source": [
     "workflow={'model_engine':'loopstructural'} \n",
     "# save last map and engine choices\n",
-    "f=open('../scratch/last_choices.txt','w') \n",
+    "f=open('../scratch-ST/last_choices.txt','w') \n",
     "ostr=str(map_choice.value)+'\\n'+'loopstructural'+'\\n'\n",
     "f.write(ostr)\n",
     "f.close()"
@@ -352,7 +354,7 @@
    "outputs": [],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn' ):\n",
-    "    test_data_path='../scratch/'\n",
+    "    test_data_path='../scratch-ST/'\n",
     "    minx=mbbox.total_bounds[0]\n",
     "    maxx=mbbox.total_bounds[2]\n",
     "    miny=mbbox.total_bounds[1]\n",
@@ -1033,6 +1035,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
