--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -71,6 +71,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
+    "if(not os.path.isdir('../QLD/tmp')):\n",
+    "    os.mkdir('../QLD/tmp')\n",
     "\n",
     "if(os.path.isfile('../QLD/last_choices2.txt')):\n",
     "    f=open('../QLD/last_choices2.txt','r')\n",
