--- a/notebooks/4. NT leaflet example.ipynb
+++ b/notebooks/4. NT leaflet example.ipynb
@@ -70,6 +70,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
+    "if(not os.path.isdir('../NT/tmp')):\n",
+    "    os.mkdir('../NT/tmp')\n",
     "if(os.path.isfile('../NT/last_choices.txt')):\n",
     "    f=open('../NT/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
