--- a/notebooks/5. VIC leaflet example.ipynb
+++ b/notebooks/5. VIC leaflet example.ipynb
@@ -71,6 +71,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
+    "if(not os.path.isdir('../VIC/tmp')):\n",
+    "    os.mkdir('../VIC/tmp')\n",
     "if(os.path.isfile('../VIC/last_choices.txt')):\n",
     "    f=open('../VIC/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
