--- a/notebooks/7. TAS leaflet example.ipynb
+++ b/notebooks/7. TAS leaflet example.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "## map2loop: Tasmania\n",
     "\n",
-    "# NOT CONNECTED TO DATASETS (YET)...\n",
     "\n",
     "<img src='../graphics/loop_sm.png'>\n",
     "   \n",
@@ -72,6 +71,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
+    "if(not os.path.isdir('../TAS/tmp')):\n",
+    "    os.mkdir('../TAS/tmp')\n",
     "if(os.path.isfile('../TAS/last_choices.txt')):\n",
     "    f=open('../TAS/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
