--- a/notebooks/3. NSW leaflet example.ipynb
+++ b/notebooks/3. NSW leaflet example.ipynb
@@ -70,6 +70,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
+    "if(not os.path.isdir('../NSW/tmp')):\n",
+    "    os.mkdir('../NSW/tmp')\n",
     "if(os.path.isfile('../NSW/last_choices.txt')):\n",
     "    f=open('../NSW/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
