--- a/notebooks/6. SA leaflet example.ipynb
+++ b/notebooks/6. SA leaflet example.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,24 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d92e3a3bc9743728126d5e44ba4cb0c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Map area:', index=1, options=('Draw Your Own', 'Last Area Drawn'), value='Last Area Draw…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "import os\n",
@@ -86,6 +71,8 @@
     "# load last saved map area and mdoe engine (if they exist)\n",
     "if(not os.path.isdir('../scratch/')):\n",
     "    os.mkdir('../scratch/')\n",
+    "if(not os.path.isdir('../SA/tmp')):\n",
+    "    os.mkdir('../SA/tmp')\n",
     "if(os.path.isfile('../SA/last_choices.txt')):\n",
     "    f=open('../SA/last_choices.txt','r')\n",
     "    contents =f.readlines()\n",
@@ -112,17 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last Area Drawn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)\n",
@@ -136,87 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>minx</th>\n",
-       "      <th>miny</th>\n",
-       "      <th>maxx</th>\n",
-       "      <th>maxy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>138.558354</td>\n",
-       "      <td>-33.589956</td>\n",
-       "      <td>139.014345</td>\n",
-       "      <td>-33.112752</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         minx       miny        maxx       maxy\n",
-       "0  138.558354 -33.589956  139.014345 -33.112752"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83e8de3f194645b7b2eec129ef0dcdac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Label(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7812cbe370645649f99574817bbdefa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[-33.351354, 138.7863495], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_titl…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
@@ -353,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,23 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:02.266775Z",
      "start_time": "2020-06-02T06:36:02.233778Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epsg:4326 [138.558354 -33.589956 139.014345 -33.112752]\n",
-      "epsg:28354 [ 272174.14339667 6280635.36433823  315738.26838255 6334459.02316238]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn'):\n",
     "    if(test_data_name=='Draw Your Own'):\n",
@@ -441,29 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:02.295774Z",
      "start_time": "2020-06-02T06:36:02.272778Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20f5fac5f160451e970bfa147ead7e2f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Modeller:', index=2, options=('geomodeller', 'gempy', 'loopstructural', 'noddy', 'null')…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "engine_choice=widgets.Dropdown(\n",
     "    options=['geomodeller', 'gempy','loopstructural','noddy','null'],\n",
@@ -477,17 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loopstructural\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "workflow={'model_engine':engine_choice.value} \n",
     "print(workflow['model_engine'])\n",
@@ -500,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:09.098804Z",
@@ -548,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:09.133807Z",
@@ -559,164 +430,7 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Default parameters loaded from ../SA/m2l_config.py:\n",
-      "#ROI\n",
-      "\n",
-      "step_out=0.1   #padding around dtm to ensure reprojected dtm covers target area (in degrees)\n",
-      "inset=0      #unused??\n",
-      "\n",
-      "#\n",
-      "#minx=0  #region of interest coordinates in metre-based system (or non-degree system)\n",
-      "#maxx=1\n",
-      "#miny=0\n",
-      "#maxy=1\n",
-      "model_top=1200\n",
-      "model_base=-3200\n",
-      "\n",
-      "#PATHS\n",
-      "\n",
-      "local_paths=False       #flag to use local or WFS source for data inputs (True = local)\n",
-      "\n",
-      "\n",
-      "data_path=''\n",
-      "clut_path='../SA/data/GSSA_2M_colours.csv'\n",
-      "base_url='https://gs-seamless.geoscience.nsw.gov.au/geoserver/ows?service=wfs&version=2.0.0&request=GetFeature&typeName='\n",
-      "\n",
-      "structure_file='../SA/data/sth_flinders_28354.shp'\n",
-      "fault_file='../SA/data/2M Linear Structures_28354.shp'\n",
-      "fold_file='../SA/data/2M Linear Structures_28354.shp'\n",
-      "geology_file='../SA/data/2M_Surface_Geology_28354_relage.shp'\n",
-      "mindep_file='../source_data/null_mindeps.shp'\n",
-      "\n",
-      "#CRS\n",
-      "\n",
-      "src_crs = 'epsg:4326'  # coordinate reference system for imported dtms (geodetic lat/long WGS84)\n",
-      "dst_crs = 'epsg:28354' # coordinate system for data\n",
-      "\n",
-      "#CODES AND LABELS \n",
-      "# these refer to specific fields (codes) in GIS layer or database that contain the info needed for these calcs and text substrings (labels) in the contents of these fields\n",
-      "c_l={'d': 'INCLINATIO',\n",
-      " 'dd': 'AZIMUTH_TR',\n",
-      " 'sf': 'STRUCTURE_',\n",
-      " 'bedding': 'bedding',\n",
-      " 'otype': 'dip direction',\n",
-      " 'bo': 'YOUNGING',\n",
-      " 'btype': '-',\n",
-      " 'g': 'PARENTNAME',\n",
-      " 'g2': 'PROVINCE',\n",
-      " 'c': 'STRATNAME',\n",
-      " 'ds': 'STRATDESC',\n",
-      " 'u': 'MAINUNIT',\n",
-      " 'r1': 'No_col',\n",
-      " 'r2': 'No_col',\n",
-      " 'sill': 'sill',\n",
-      " 'intrusive': 'intrusive',\n",
-      " 'volcanic': 'volc',\n",
-      " 'msc': 'SITE_CODE',\n",
-      " 'msn': 'SHORT_NAME',\n",
-      " 'mst': 'SITE_TYPE_',\n",
-      " 'mtc': 'TARGET_COM',\n",
-      " 'mscm': 'SITE_COMMO',\n",
-      " 'mcom': 'TARGET_COM',\n",
-      " 'minf': 'Cons',\n",
-      " 'min': 'RELAGE',\n",
-      " 'max': 'RELAGE',\n",
-      " 'f': 'DESCRIPTIO',\n",
-      " 'fault': 'Fault',\n",
-      " 'ff': 'DESCRIPTIO',\n",
-      " 'fold': 'Fold',\n",
-      " 'fdip': 'No_col',\n",
-      " 'fdipnull': '0',\n",
-      " 'fdipdir': 'No_col',\n",
-      " 'fdipdir_flag': 'alpha',\n",
-      " 'fdipest': 'No_col',\n",
-      " 'fdipest_vals': 'No_col',\n",
-      " 'n': 'No_col',\n",
-      " 't': 'No_col',\n",
-      " 'syn': 'syn',\n",
-      " 'o': 'ID',\n",
-      " 'gi': 'FIELD_STRU'}\n",
-      "\n",
-      "#DECIMATION\n",
-      "\n",
-      "orientation_decimate=0  #store every nth orientation (in object order) 0 = save all\n",
-      "contact_decimate=10     #store every nth contact point (in object order) 0 = save all\n",
-      "fault_decimate=5        #store every nth fault point (in object order) 0 = save all\n",
-      "fold_decimate=5         #store every nth fold axial trace point (in object order) 0 = save all\n",
-      "\n",
-      "#INTERPOLATION\n",
-      "\n",
-      "gridx=50                #x grid dimensions (no of points, not distance) for interpolations\n",
-      "gridy=50                #x grid dimensions (no of points, not distance) for interpolations\n",
-      "scheme='scipy_rbf'      #interpolation scheme\n",
-      "dist_buffer=5           #buffer distance for clipping points by faults (in metres or same units as dst_crs)\n",
-      "intrusion_mode=0        # 1 all intrusions exluded from basal contacts, 0 only sills\n",
-      "use_interpolations=False    # flag to use interpolated orientations or not.\n",
-      "\n",
-      "#ASSUMPTIONS\n",
-      "\n",
-      "pluton_dip=45           #surface dip of pluton contacts\n",
-      "pluton_form='domes'     #saucers: \\__+_+__/  batholith: +/       \\+   domes: /  +  + \\  pendant: +\\_____/+\n",
-      "fault_dip=90            #surface dip of faults\n",
-      "\n",
-      "#DERIVED AND FIXED PATHS\n",
-      "\n",
-      "m2m_cpp_path='../m2m_cpp/'\n",
-      "\n",
-      "graph_path=test_data_path+'graph/'\n",
-      "tmp_path=test_data_path+'tmp/'\n",
-      "#data_path=test_data_path+'data/'\n",
-      "dtm_path=test_data_path+'dtm/'\n",
-      "output_path=test_data_path+'output/'\n",
-      "vtk_path=test_data_path+'vtk/'\n",
-      "\n",
-      "fault_file_csv=tmp_path+'fault_file.csv'\n",
-      "structure_file_csv=tmp_path+'structure_file.csv'\n",
-      "geology_file_csv=tmp_path+'geology_file.csv'\n",
-      "mindep_file_csv=tmp_path+'mindep_file.csv'\n",
-      "\n",
-      "fault_file=data_path+fault_file\n",
-      "fold_file=data_path+fold_file\n",
-      "structure_file=data_path+structure_file\n",
-      "geology_file=data_path+geology_file\n",
-      "mindep_file=data_path+mindep_file\n",
-      "\n",
-      "strat_graph_file=test_data_path+'graph/graph_strat_NONE.gml'\n",
-      "\n",
-      "dtm_file=dtm_path+'dtm.tif'\n",
-      "dtm_reproj_file=dtm_path+'dtm_rp.tif'\n",
-      "\n",
-      "if(not os.path.isdir(test_data_path)):\n",
-      "   os.mkdir(test_data_path)\n",
-      "if(not os.path.isdir(tmp_path)):\n",
-      "   os.mkdir(tmp_path)\n",
-      "if(not os.path.isdir(output_path)):\n",
-      "   os.mkdir(output_path)\n",
-      "if(not os.path.isdir(dtm_path)):\n",
-      "   os.mkdir(dtm_path)\n",
-      "if(not os.path.isdir(vtk_path)):\n",
-      "   os.mkdir(vtk_path)\n",
-      "if(not os.path.isdir(graph_path)):\n",
-      "   os.mkdir(graph_path)\n",
-      "\n",
-      "print('Default parameters loaded from '+test_data_path+'m2l_config.py:')\n",
-      "with open('../SA/m2l_config.py', 'r') as myfile:\n",
-      "  data = myfile.read()\n",
-      "  print(data)\n",
-      "  myfile.close()\n",
-      "\n",
-      "print('Modify these parameters in the cell below')\n",
-      "\n",
-      "Modify these parameters in the cell below\n",
-      "C:\\Users\\00073294\\Dropbox\\1_Jupyter_notebooks\\map2loop\\SA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn' ):\n",
     "    test_data_path='../SA/'\n",
@@ -749,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:09.160806Z",
@@ -879,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:09.528875Z",
@@ -889,16 +603,7 @@
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "available: geo.loop-gis.org\n",
-      "available: services.ga.gov.au\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loopwfs=m2l_utils.have_access(\"geo.loop-gis.org\")\n",
     "ga=m2l_utils.have_access(\"services.ga.gov.au\")\n",
@@ -937,116 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " orientations layer  metadata\n",
-      "--------------------\n",
-      "    bbox [ 272174.49278483 6280643.53088266  315734.41615972 6334436.20843202]\n",
-      "    CRS epsg:28354\n",
-      "    # items 5916\n",
-      "    Data types ['Point']\n",
-      "\n",
-      " geology layer  metadata\n",
-      "--------------------\n",
-      "    bbox [ 262103.31399109 6090281.62723881  432480.2578233  6425343.02745258]\n",
-      "    CRS epsg:28354\n",
-      "    # items 37\n",
-      "    Data types ['Polygon']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\00073294\\Anaconda3\\envs\\loop\\lib\\site-packages\\geopandas\\geoseries.py:411: UserWarning: GeoSeries.notna() previously returned False for both missing (None) and empty geometries. Now, it only returns False for missing values. Since the calling GeoSeries contains empty geometries, the result has changed compared to previous versions of GeoPandas.\n",
-      "Given a GeoSeries 's', you can use '~s.is_empty & s.notna()' to get back the old behaviour.\n",
-      "\n",
-      "To further ignore this warning, you can do: \n",
-      "import warnings; warnings.filterwarnings('ignore', 'GeoSeries.notna', UserWarning)\n",
-      "  return self.notna()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " fold layer  metadata\n",
-      "--------------------\n",
-      "    bbox [ 274302.21018417 6281401.120659    310381.65895692 6328944.98938237]\n",
-      "    CRS epsg:28354\n",
-      "    # items 48\n",
-      "    Data types ['LineString']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\00073294\\Anaconda3\\envs\\loop\\lib\\site-packages\\geopandas\\geoseries.py:411: UserWarning: GeoSeries.notna() previously returned False for both missing (None) and empty geometries. Now, it only returns False for missing values. Since the calling GeoSeries contains empty geometries, the result has changed compared to previous versions of GeoPandas.\n",
-      "Given a GeoSeries 's', you can use '~s.is_empty & s.notna()' to get back the old behaviour.\n",
-      "\n",
-      "To further ignore this warning, you can do: \n",
-      "import warnings; warnings.filterwarnings('ignore', 'GeoSeries.notna', UserWarning)\n",
-      "  return self.notna()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " fault layer  metadata\n",
-      "--------------------\n",
-      "    bbox [ 274302.21018417 6281401.120659    310381.65895692 6328944.98938237]\n",
-      "    CRS epsg:28354\n",
-      "    # items 48\n",
-      "    Data types ['LineString']\n",
-      "\n",
-      " mindeps layer  metadata\n",
-      "--------------------\n",
-      "    empty file, check contents\n",
-      "\n",
-      "Warnings:\n",
-      "     2 NaN/blank found in column \"INCLINATIO\" of orientations file, replacing with 0\n",
-      "     2 NaN/blank found in column \"AZIMUTH_TR\" of orientations file, replacing with 0\n",
-      "     No extra litho for geology polygons\n",
-      "     No more extra litho for geology polygons\n",
-      "     53 NaN/blank found in column \"STRATDESC\" of geology file, replacing with 0\n",
-      "     No fold polarity for fold polylines\n",
-      "     No fault dip for fault polylines\n",
-      "     No fault dip direction for fault polylines\n",
-      "     No fault dip estimate for fault polylines\n",
-      "     No fault dip estimate text for fault polylines\n",
-      "     No fault name for fault polylines\n",
-      "     no mindeps for analysis\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\00073294\\dropbox\\1_jupyter_notebooks\\map2loop\\map2loop\\m2l_map_checker.py:304: UserWarning: The warnings listed above were issued\n",
-      "  warnings.warn('The warnings listed above were issued')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "No errors found, clipped and updated files saved to tmp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "structure_file,geology_file,fault_file,mindep_file,fold_file,c_l=m2l_map_checker.check_map(structure_file,geology_file,fault_file,mindep_file,fold_file,tmp_path,bbox,c_l,dst_crs,local_paths,drift_prefix,roi_poly)"
    ]
