get bounds from polygon

--- a/notebooks/2. QLD leaflet example.ipynb
+++ b/notebooks/2. QLD leaflet example.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a14ad4912174da3b85b7a18e481c3c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Map area:', index=2, options=('QLD', 'Draw Your Own', 'Last Area Drawn'), value='Last Ar…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "import os\n",
@@ -100,9 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last Area Drawn\n"
+     ]
+    }
+   ],
    "source": [
     "test_data_name=map_choice.value\n",
     "print(test_data_name)\n",
@@ -116,11 +139,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>minx</th>\n",
+       "      <th>miny</th>\n",
+       "      <th>maxx</th>\n",
+       "      <th>maxy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>139.158467</td>\n",
+       "      <td>-19.287636</td>\n",
+       "      <td>139.297059</td>\n",
+       "      <td>-19.157964</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         minx       miny        maxx       maxy\n",
+       "0  139.158467 -19.287636  139.297059 -19.157964"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "139.158467 139.29705900000002 -19.287636 -19.157964\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fed1852d6a3d447e9d62568e13dd1d10",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29c15ee311664a06aa0fd766e46aa065",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[-19.2228, 139.227763], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import folium\n",
     "import pandas as pd\n",
@@ -236,9 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1.#!conda install -c conda-forge ipyleaflet -y\n",
     "2#!jupyter nbextension enable --py --sys-prefix ipyleaflet\n"
@@ -246,14 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-02T06:36:02.266775Z",
      "start_time": "2020-06-02T06:36:02.233778Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epsg:4326 [139.158467 -19.287636 139.297059 -19.157964]\n",
+      "epsg:28355 [-326577.54751178 7848594.6038272  -311254.57803924 7863706.90206838]\n"
+     ]
+    }
+   ],
    "source": [
     "if(test_data_name=='Draw Your Own' or test_data_name=='Last Area Drawn'):\n",
     "    if(test_data_name=='Draw Your Own'):\n",
